Minor typo fixes and cleaning up repositories page

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,6 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - aven-arlington
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - aven-arlington/flashcards-cli
+  - aven-arlington/nvim
