--- a/_config.yml
+++ b/_config.yml
@@ -187,7 +187,7 @@ latest_posts:
 latest_projects:
   enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 new project items
-  limit: # leave blank to include all the project posts
+  limit: 3 # leave blank to include all the project posts
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
