--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,5 +2,6 @@ github_users:
   - aven-arlington
 
 github_repos:
+  - aven-arlington/rpi-stock-checker
   - aven-arlington/flashcards-cli
   - aven-arlington/nvim
